--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <section class="page-header">
       <h1 class="project-name">Gyyi.GitHub.com</h1>
       <h2 class="project-tagline">呵呵哒</h2>
+      <a href="test.html">测试一下</a>
     </section>
 
     <section class="main-content">
